--- a/notes.html
+++ b/notes.html
@@ -22,8 +22,8 @@
   <main class="content">
     <h2>📚 Notes</h2>
     <ul>
-      <li><a href="pdfs/notes-unit1.pdf" target="_blank">Unit 1 Notes</a></li>
-      <li><a href="pdfs/notes-unit2.pdf" target="_blank">Unit 2 Notes</a></li>
+      <li><a href="pdfs/M-III-UNIT-I (P&S) NOTES.pdf" target="_blank">Unit-I Notes</a></li>
+      <li><a href="pdfs/notes-unit2.pdf" target="_blank">Dummy</a></li>
     </ul>
   </main>
 
