--- a/pyqps.html
+++ b/pyqps.html
@@ -22,8 +22,8 @@
   <main class="content">
     <h2>📄 Previous Year Papers</h2>
     <ul>
-      <li><a href="pdfs/pyq-2022.pdf" target="_blank">PYQ 2022</a></li>
-      <li><a href="pdfs/pyq-2023.pdf" target="_blank">PYQ 2023</a></li>
+      <li><a href="pdfs/M-III O.U Previous Papers.pdf" target="_blank">M-III O.U Previous Papers</a></li>
+      <li><a href="pdfs/pyq-2023.pdf" target="_blank">Dummy</a></li>
     </ul>
   </main>
 
