--- a/syllabus.html
+++ b/syllabus.html
@@ -22,8 +22,8 @@
   <main class="content">
     <h2>📘 Syllabus</h2>
     <ul>
-      <li><a href="pdfs/syllabus-sem1.pdf" target="_blank">Semester 1</a></li>
-      <li><a href="pdfs/syllabus-sem2.pdf" target="_blank">Semester 2</a></li>
+      <li><a href="pdfs/M-III  Syllabus.pdf" target="_blank">M-III Syllabus</a></li>
+      <li><a href="pdfs/syllabus-sem2.pdf" target="_blank">Dummy</a></li>
     </ul>
   </main>
 
