Added new pdf's

--- a/notes.html
+++ b/notes.html
@@ -21,10 +21,11 @@
 
   <main class="content">
     <h2>📚 Notes</h2>
-    <ul>
-      <li><a href="pdfs/M-III-UNIT-I (P&S) NOTES.pdf" target="_blank">Unit-I Notes</a></li>
-      <li><a href="pdfs/notes-unit2.pdf" target="_blank">Dummy</a></li>
-    </ul>
+    <div class="pdf-links">
+      <a href="pdfs/M-III-UNIT-I (P&S) NOTES.pdf" target="_blank">📄 M-III-UNIT-I (P&S) NOTES.pdf</a>
+      |
+      <a href="pdfs/M-III-UNIT-I (P&S) NOTES.pdf" download>⬇️ Download</a>
+    </div>
   </main>
 
   <footer>
