--- a/pyqps.html
+++ b/pyqps.html
@@ -21,10 +21,11 @@
 
   <main class="content">
     <h2>📄 Previous Year Papers</h2>
-    <ul>
-      <li><a href="pdfs/M-III O.U Previous Papers.pdf" target="_blank">M-III O.U Previous Papers</a></li>
-      <li><a href="pdfs/pyq-2023.pdf" target="_blank">Dummy</a></li>
-    </ul>
+    <div class="pdf-links">
+      <a href="pdfs/M-III O.U Previous Papers.pdf" target="_blank">📄 M-III O.U Previous Papers</a>
+      |
+      <a href="pdfs/M-III O.U Previous Papers.pdf" download>⬇️ Download</a>
+    </div>
   </main>
 
   <footer>
