--- a/syllabus.html
+++ b/syllabus.html
@@ -21,10 +21,11 @@
 
   <main class="content">
     <h2>📘 Syllabus</h2>
-    <ul>
-      <li><a href="pdfs/M-III  Syllabus.pdf" target="_blank">M-III Syllabus</a></li>
-      <li><a href="pdfs/syllabus-sem2.pdf" target="_blank">Dummy</a></li>
-    </ul>
+    <div class="pdf-links">
+      <a href="pdfs/M-III  Syllabus.pdf" target="_blank">📄 M-III Syllabus</a>
+      |
+      <a href="pdfs/M-III  Syllabus.pdf" download>⬇️ Download</a>
+    </div>
   </main>
 
   <footer>
