Added download toast

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Home</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <script src="script.js"></script>
 
 <body>
@@ -47,9 +48,9 @@
         <li class="dropdown">
           <a href="#" class="dropbtn">Classroom</a>
           <ul class="dropdown-menu">
-            <li><a href="syllabus.html">Syllabus</a></li>
-            <li><a href="pyqps.html">Previous Year Papers</a></li>
-            <li><a href="notes.html">Notes</a></li>
+            <li><a href="syllabus.html" target="_blank">Syllabus</a></li>
+            <li><a href="pyqps.html" target="_blank">Previous Year Papers</a></li>
+            <li><a href="notes.html" target="_blank">Notes</a></li>
           </ul>
         </li>
 
