--- a/pyqps.html
+++ b/pyqps.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 
+<script src="script.js"></script>
+
+<div id="download-toast" class="hidden toast">📥 Download started...</div>
+
 <body>
   <header>
     <img src="images/logo.jpg" alt="Institution Logo" class="logo" />
@@ -22,7 +26,7 @@
   <main class="content">
     <h2>📄 Previous Year Papers</h2>
     <div class="pdf-links">
-      <a href="pdfs/M-III O.U Previous Papers.pdf" target="_blank">📄 M-III O.U Previous Papers</a>
+      <a href="pdfs/M-III O.U Previous Papers.pdf">📄 M-III O.U Previous Papers</a>
       |
       <a href="pdfs/M-III O.U Previous Papers.pdf" download>⬇️ Download</a>
     </div>
